style.css
:root {
  /* Colors */
  --color-cyan-hover: #71C0D4;
  --color-purple-hover: #B18BDD;
  --color-cyan-600: hsl(192, 37%, 48%);
  --color-cyan-300: hsl(192, 90%, 77%);
  --color-purple-600: hsl(268, 34%, 53%);
  --color-purple-300: hsl(268, 100%, 86%);
  --color-slate-900: hsl(240, 21%, 20%);
  --color-slate-600: hsl(240, 10%, 57%);
  --color-slate-300: hsl(240, 18%, 85%);
  --color-white: hsl(0, 0%, 98%);
  /* Typography */
  --fs-h1: clamp(2.5rem, 6.25vw, 4rem);
  --fs-h2: clamp(2rem, 4.6875vw, 2.5rem);
  --fs-label: clamp(0.75rem, 1.822916vw, 1rem);
  --fs-body: clamp(1rem, 2vw, 1.125rem);
  --fs-base: 1rem;
  --lh-heading: 1.1;
  --lh-body: 1.5;
  --ls-label: 0.25rem;
  --font-primary: 'Red Hat Display', sans-serif;
  --fw-medium: 500;
  --fw-black: 900;
  /* Size */
  --hero-max-width: 19.0625rem;
  --radius-btn: 29px;
  --radius-img: 12px;
}

/* Reset */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

img {
  display: block;
}

/* body */
body {
  font-family: var(--font-primary);
  color: var(--color-slate-900);
  background-color: var(--color-white);
}

h1 {
  color: var(--color-slate-900);
  font-size: var(--fs-h1);
  line-height: var(--lh-heading);
  font-weight: var(--fw-black);
}

h2 {
  color: var(--color-slate-900);
  font-size: var(--fs-h2);
  line-height: var(--lh-heading);
  font-weight: var(--fw-black);
}

p {
  color: var(--color-slate-600);
  font-size: var(--fs-body);
  line-height: var(--lh-body);
  font-weight: var(--fw-medium);
}

/* Header */
header {
  padding: 3rem 5rem 0 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
}
header .logo {
  max-width: 100%;
}

/* Hero-img */
.hero-img {
  display: flex;
  justify-content: center;
  gap: 1.0625rem;
}

/* Hero */
.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 4rem 2rem 2rem 2rem;
  text-align: center;
}
.hero .hero-container {
  max-width: var(--hero-max-width);
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
.hero .hero-container .hero-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

/* Button */
.box-button {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.0625rem;
}
.box-button li {
  border-radius: var(--radius-btn);
}
.box-button li a {
  color: var(--color-white);
  font-size: var(--fs-base);
  line-height: var(--lh-body);
  text-decoration: none;
  font-weight: var(--fw-black);
  display: flex;
  gap: 0.25rem;
  padding: 1rem 2.5rem;
  border-radius: var(--radius-btn);
}
.box-button li a span {
  color: var(--color-cyan-300);
}
.box-button .button-left {
  background-color: var(--color-cyan-600);
}
.box-button .button-left:hover {
  background-color: var(--color-cyan-hover);
}
.box-button .button-left a:focus {
  background-color: var(--color-cyan-hover);
}
.box-button .button-right {
  background-color: var(--color-purple-600);
}
.box-button .button-right:hover {
  background-color: var(--color-purple-hover);
}
.box-button .button-right a:focus {
  background-color: var(--color-purple-hover);
}

/* Number */
.container-number {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.container-number .line-number {
  background-color: var(--color-slate-300);
  width: 1px;
  height: 80px;
}
.container-number .box-number {
  background-color: var(--color-white);
  border: 1px solid var(--color-slate-300);
  margin: auto;
  width: 56px;
  height: 56px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}
.container-number .box-number .number {
  font-weight: var(--fw-black);
}

/* Features */
.features-container {
  padding: 2rem 2rem 4rem 2rem;
  text-align: center;
}
.features-container .features {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}
.features-container .features .features-img {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
}
.features-container .features .features-img img {
  width: 100%;
  border-radius: var(--radius-img);
}
.features-container .features .features-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.features-container .features .features-content .label {
  color: var(--color-cyan-600);
  font-size: var(--fs-label);
  line-height: var(--lh-heading);
  letter-spacing: var(--ls-label);
  font-weight: var(--fw-black);
}
.features-container .features .features-content .features-heading {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/* CTA */
footer .cta::before {
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  background-color: var(--color-cyan-600);
  opacity: 0.9;
}
footer .copy {
  background-color: var(--color-purple-600);
  color: var(--color-white);
  font-weight: var(--fw-medium);
  text-align: center;
  padding: 1rem 0;
}

.cta {
  position: relative;
  background-image: url(./assets/mobile/image-footer.jpg);
  background-size: cover;
  margin-top: -1.75rem;
  padding: 4rem 2rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1.75rem;
}
.cta h2 {
  color: var(--color-white);
  z-index: 1;
}
.cta p {
  color: var(--color-white);
  font-weight: var(--fw-medium);
  z-index: 1;
}
.cta .button-cta {
  width: 12.0625rem;
  margin: auto;
  background-color: var(--color-purple-600);
  z-index: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: var(--radius-btn);
}
.cta .button-cta:hover {
  background-color: var(--color-purple-hover);
  cursor: pointer;
}
.cta .button-cta a {
  color: var(--color-white);
  font-size: var(--fs-base);
  line-height: var(--lh-body);
  text-decoration: none;
  font-weight: var(--fw-black);
  display: flex;
  gap: 0.25rem;
  padding: 1rem 2.5rem;
  border-radius: var(--radius-btn);
}
.cta .button-cta a:focus {
  background-color: var(--color-purple-hover);
}
.cta .button-cta a span {
  color: var(--color-purple-300);
}

@media (min-width: 768px) {
  .hero {
    padding: 4rem 2rem;
  }
  .hero .hero-img {
    display: flex;
    gap: 2rem;
  }
  .hero .hero-img img {
    width: 394px;
    height: 303px;
  }
  .hero .hero-container {
    max-width: 42.5rem;
    display: flex;
    gap: 4.5rem;
  }
  .hero .hero-container .hero-content {
    width: 28.01875rem;
    margin: auto;
  }
  .features-container {
    padding: 3.5rem 2rem 4rem 2rem;
  }
  .features-container .features .features-img {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 1fr;
    gap: 1.5rem;
  }
  .features-container .features .features-img img {
    width: 152px;
    height: 160px;
  }
  .features-container .features .features-content {
    max-width: 31.5rem;
    margin: auto;
  }
  .cta {
    background-image: url(./assets/tablet/image-footer.jpg);
  }
}
@media (min-width: 1440px) {
  .hero {
    padding: 4rem 5rem;
    display: flex;
    flex-direction: row;
  }
  .hero .hero-container {
    max-width: 70rem;
    height: 100%;
    width: 100%;
    position: relative;
    gap: 1.5rem;
  }
  .hero .hero-container .img-left {
    order: -1;
    position: absolute;
    left: -190px;
    top: 0;
  }
  .hero .hero-container .hero-content {
    order: 2;
  }
  .hero .hero-container .img-right {
    order: 3;
    position: absolute;
    right: -190px;
    bottom: 0;
  }
  .features-container {
    padding: 3.5rem 5rem 4.5rem 5rem;
  }
  .features-container .features {
    align-items: center;
  }
  .features-container .features .features-img {
    max-width: 70rem;
  }
  .features-container .features .features-img img {
    width: 256px;
    height: 256px;
  }
  .cta {
    background-image: url(./assets/desktop/image-footer.jpg);
    padding: 7rem 5rem;
    flex-direction: row;
    align-items: center;
    text-align: left;
  }
  .cta h2 {
    width: 27.8125rem;
  }
  .cta p {
    width: 22.1875rem;
  }
}

/*# sourceMappingURL=style.css.map */

